--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title> Mi primera pelotudez </title>
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I,m hosted with GitHub Pages. </p>
+Este texto va referido a ti Juli mamaverga chuapijas,pelotuda rencorosa no sabes ni haser un ferné. 
 </body>
 </html>
