--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <body>
 <h1>Hello World</h1>
 <p>Primer texto de prueba, espero que les guste. :) </p>
+
+<hr>
+<p><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
+</hr>
+
 </body>
 </html>
