--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<p>Primer texto de prueba, espero que les guste. :) </p>
+<h2>Segundo título para comprobar los distintos títulos. </h2>
+<p>Primer texto de prueba, espero que les guste. <b>:) </b></p>
+
+<p><b>Parrafago en engrita para comprobar su funcionamiento. </b>
 
 <hr>
 <p><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
-</hr>
+<hr/>
 
 </body>
 </html>
