--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <title> Mi primer titulo </title>
 </head>
 <body>
-<h1>Hello World</h1>
-<h2>Segundo título para comprobar los distintos títulos. </h2>
-<p>Primer texto de prueba, espero que les guste. <b>:) </b></p>
 
-<p><b>Parrafago en engrita para comprobar su funcionamiento. </b>
+<h1 style=background-color:red;>Hello World</h1><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/95e8dce4-4d2c-4595-bd78-399bed86f3a2-profile_image-70x70.png" heigth="50px">
+<h2 style=background-color:yellow;>Segundo título para comprobar los distintos títulos. </h2>
+<p style=background-color:red;>Primer texto de prueba, espero que les guste. <b>:) </b></p>
+
+<p align="center"> <b>Parrafago en negrita y centrado para comprobar su funcionamiento. </b>
 
 <hr>
-<p><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
+<p align="right" style=background-color:yellow;><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
 <hr/>
-
+<p><b>Canal de mi amigo XavierElTormentas siganlo.</b> <a href="https://www.twitch.tv/xavostorm" > Enlace aquí</a></p> 
 </body>
 </html>
