--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style=background-color:red;>Hello World</h1><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/95e8dce4-4d2c-4595-bd78-399bed86f3a2-profile_image-70x70.png" heigth="50px">
+<h1 style=background-color:red;>Hello Stormies!!</h1><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/95e8dce4-4d2c-4595-bd78-399bed86f3a2-profile_image-70x70.png" heigth="50px">
 <h2 style=background-color:yellow;>Segundo título para comprobar los distintos títulos. </h2>
 <p style=background-color:red;>Primer texto de prueba, espero que les guste. <b>:) </b></p>
 
