--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 
 <h1 style=background-color:red;>Hello Stormies!!</h1><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/95e8dce4-4d2c-4595-bd78-399bed86f3a2-profile_image-70x70.png" heigth="50px">
-<h2 style=background-color:yellow;>Segundo título para comprobar los distintos títulos. </h2>
-<p style=background-color:red;>Primer texto de prueba, espero que les guste. <b>:) </b></p>
+<h2 style=background-color:pink;>Segundo título para comprobar los distintos títulos. </h2>
+<p style=background-color:pink;>Primer texto de prueba, espero que les guste. <b>:) </b></p>
 
-<p align="center"> <b>Parrafago en negrita y centrado para comprobar su funcionamiento. </b>
+<p style=background-color:pink; align="center"> <b>Parrafago en negrita y centrado para comprobar su funcionamiento. </b>
 
 <hr>
 <p align="right" style=background-color:yellow;><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
