--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 <p align="right" style=background-color:yellow;><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
 <hr/>
 <p><b>Canal de mi amigo XavierElTormentas siganlo.</b> <a href="https://www.twitch.tv/xavostorm" > Enlace aquí</a></p> 
+
+
+
 <ul>
-<p>Juegos de mi infancia
+<p>Juegos de mi infancia:
 <li> Pokemon</li>
 <li> Inazuma Eleven </li>
 <li> Vuelve a Pokoemon o Inazuma, es la ostia.</li>
