--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <p>Juegos de mi infancia:
 <li> Pokemon</li>
 <li> Inazuma Eleven </li>
-<li> Vuelve a Pokoemon o Inazuma, es la ostia.</li>
-<li> No hay nada mejor que POkemon o inazuma. </li>
+<li> Vuelve a Pokemon o Inazuma, es la ostia.</li>
+<li> No hay nada mejor que Pokemon o inazuma. </li>
 
 </body>
 </html>
