--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-<ul>
+<ul style="list-style-image:url(corazon.png);">
 <p>Juegos de mi infancia:
 <li> Pokemon</li>
 <li> Inazuma Eleven </li>
