--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1 style=background-color:red;>Hello Stormies!!</h1><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/95e8dce4-4d2c-4595-bd78-399bed86f3a2-profile_image-70x70.png" heigth="50px">
 <h2 style=background-color:pink;>Segundo título para comprobar los distintos títulos. </h2>
-<p style=background-color:pink;>Primer texto de prueba, espero que les guste. <b>:) </b></p>
+<p style=background-color:pink;>Primer texto de prueba,<span style="background: yellow; color: red;"> espero que les guste. </span> <b>:) </b></p>
 
 <p style=background-color:pink; align="center"> <b>Parrafago en negrita y centrado para comprobar su funcionamiento. </b>
 
