--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
 <li> Inazuma Eleven </li>
 <li> Vuelve a Pokemon o Inazuma, es la ostia.</li>
 <li> No hay nada mejor que Pokemon o inazuma. </li>
+<table border="1px">
+<tr>
+<th> Lunes </th>
+<th> Martes </th>
+<th> Miércoles </th>
+<th> Jueves </th>
+<th> Viernes </th>
+</tr>
+
+<tr>
+<td> Descanso  </td>
+<td> Futbol </td>
+<td> Futbol </td>
+<td> Futbol </td>
+<td> Descanso </td>
+</tr>
+
+
+
+
+</tr>
 
 </body>
 </html>
