--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <hr>
 <p align="right" style=background-color:yellow;><i>Parrafo apartado y aislado por Covid, no acercarse.</i>
 <hr/>
-<p><b>Canal de mi amigo XavierElTormentas siganlo.</b> <a href="https://www.twitch.tv/xavostorm" > Enlace aquí</a></p> 
+<p div id="rojo" style="background-color: red;" ><b>Canal de mi amigo XavierElTormentas siganlo.</b> <a href="https://www.twitch.tv/xavostorm" > Enlace aquí</a></p> 
 
 
 
